[package]
name = "compactor_scheduler"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "compactor_scheduler"
path = "src/compactor_scheduler.rs"

[dependencies]
async-trait = "0.1.68"
data_types = { path = "../data_types" }
futures = "0.3"
generated_types = { version = "0.1.0", path = "../generated_types" }
iox_catalog = { path = "../iox_catalog" }
iox_time = { path = "../iox_time" }
object_store = "0.5.6"
observability_deps = { path = "../observability_deps" }
prost = "0.10"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tonic = "0.7"
tokio-util = { version = "0.7.8" }
tracker = { path = "../tracker" }
uuid = { version = "1", features = ["v4"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[build-dependencies]
tonic-build = "0.7"