[package]
name = "compactor_scheduler_grpc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.68"
data_types = { path = "../data_types" }
futures = "0.3"
generated_types = { version = "0.1.0", path = "../generated_types" }
iox_catalog = { path = "../iox_catalog" }
iox_time = { path = "../iox_time" }
object_store = "0.5.6"
observability_deps = { path = "../observability_deps" }
tonic = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
metric = { path = "../metric" }
tokio = { version = "1.28", features = ["macros", "net", "parking_lot", "rt-multi-thread", "signal", "sync", "time"] }
