[package]
name = "generated_types"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies] # In alphabetical order
observability_deps = { path = "../observability_deps" }
pbjson = { workspace = true }
pbjson-types = "0.5"
prost = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
tonic = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
bytes = "1.5"

[build-dependencies] # In alphabetical order
tonic-build = { workspace = true }
prost-build = { workspace = true }
pbjson-build = { workspace = true }
