[package]
name = "grpc-binary-logger-proto"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { version = "0.11.9", features = ["std"] }
tonic = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[build-dependencies]
prost-build = { workspace = true }
tonic-build = { workspace = true }
